--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,8 @@
 @article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+  title = {Anthropogenic and environmental drivers of Acanthurus achilles presence in Hawaii},
+  author={Layko,RB and Donovan,MK},
+  journal = {Marine Ecology Progress Series},
+  year    = 2024,
+  volume  = 740,
+  number  = 161-174
 }
