--- a/content/publication/journal-article-geoboundaries/cite.bib
+++ b/content/publication/journal-article-geoboundaries/cite.bib
@@ -1,8 +1,11 @@
-@article{example2,
-  title = {Anthropogenic and environmental drivers of Acanthurus achilles presence in Hawaii},
-  author={Layko,RB and Donovan,MK},
-  journal = {Marine Ecology Progress Series},
-  year    = 2024,
-  volume  = 740,
-  number  = 161-174
+@article{geoboundaries,
+  title = {geoBoundaries: A global database of political administrative boundaries},
+  author = {Runfola, Daniel and Anderson, Austin and Baier, Heather and Crittenden, Matt and Dowker, Elizabeth and Fuhrig, Sydney and Goodman, Seth and Grimsley, Grace and Layko, Rachel and Melville, Graham and Mulder, Maddy and Oberman, Rachel and Panganiban, Joshua and Peck, Andrew and Seitz, Leigh and Shea, Sylvia and Slevin, Hannah and Youngerman, Rebecca and Hobbs, Lauren},
+  journal = {PLOS One},
+  year = {2020},
+  volume = {15},
+  number = {4},
+  pages = {e0231866},
+  doi = {10.1371/journal.pone.0231866},
+  url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0231866}
 }
